Subdivision Modifier Showing all face dots instead of just the nonsubdivided dot. #62941

Closed
opened 2019-03-25 21:48:31 +01:00 by Vaughan Ling · 6 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.17

Blender Version
Broken: version: 2.80 (sub 51), branch: blender2.7, commit date: 2019-03-25 00:55, hash: 07f6be87a9
Worked: (optional)

Short description of error

Mesh with Subdivision Modifier and 'Show On Cage' and 'Show Xray' displays face dots of each subdivided face, instead of only the nonsubdivided dot.TooManyFaceDots.gif

Exact steps for others to reproduce the error
subdivide cube, turn on "Show on Cage' and Show Xray

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.17 **Blender Version** Broken: version: 2.80 (sub 51), branch: blender2.7, commit date: 2019-03-25 00:55, hash: `07f6be87a9` Worked: (optional) **Short description of error** Mesh with Subdivision Modifier and 'Show On Cage' and 'Show Xray' displays face dots of each subdivided face, instead of only the nonsubdivided dot.![TooManyFaceDots.gif](https://archive.blender.org/developer/F6882618/TooManyFaceDots.gif) **Exact steps for others to reproduce the error** subdivide cube, turn on "Show on Cage' and Show Xray
Author

Added subscriber: @heavypoly

Added subscriber: @heavypoly

#65103 was marked as duplicate of this issue

#65103 was marked as duplicate of this issue
Clément Foucault was assigned by Sebastian Parborg 2019-03-26 15:44:41 +01:00

Added subscriber: @EZ2H4CK

Added subscriber: @EZ2H4CK

This issue was referenced by 226c6f086a

This issue was referenced by 226c6f086aa255bb71e554c860545bb435c06756

Added subscriber: @ssendam

Added subscriber: @ssendam

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62941
No description provided.